[package]
name = "mobilki-anomaly"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
rocket = { version = "0.5.0-rc.1",  features = ["json"] }
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
prost = "0.9.0"
reqwest = "0.11.7"
rand = "0.8.4"
structopt="0.3.25"
image="0.23.14"
tokio="1.14.0"
base64="0.13.0"